apps/sonarr/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`sonarr.${DOMAIN}`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
    - match: Host(`sonarr.${DOMAIN}`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: authentik
          namespace: traefik
